# terraria_autofish

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
terraria_autofish/: __main__.py  bot.py  game.py  names.py
terraria_autofish/clicker/: __init__.py  base.py  ydotool.py
terraria_autofish/js/: check_bite.js
terraria_autofish/platform/: __init__.py  base.py  linux_native.py  proton.py
